# Object_Detection_on_C

./: CMakeLists.txt  README.md
include/: matrix.h
include/matrix/: matmul.h
src/: main.c
src/matrix/: matmul.c
